align corrections

--- a/week-03/assets/css/style.css
+++ b/week-03/assets/css/style.css
@@ -38,15 +38,15 @@ h3 {
 }
 
 h4 {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 400;
     color: #49a37b;
 }
 
 section {
     border-top: 1px solid black;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 /*-------------------------------------*/
@@ -131,20 +131,22 @@ section {
     display: inline-block;
 }
 
-.app-function-paragraph {
-    padding-top: 5px;
-    width: 100%;
-}
-
 .img-function {
     display: inline-block;
     width: 86px;
     height: 86px;
+    padding-bottom: 35px;
 }
 
 .description-function {
     display: inline-block;
-    width: 80%;
+    width: 60%;
+    margin-left: 30px;
+}
+
+.app-function-paragraph {
+    padding-top: 15px;
+    width: 100%;
 }
 
 /*-------------------------------------*/
@@ -159,7 +161,7 @@ section {
 .title-about { 
     position: relative;
     display: inline-block;
-    top: 35px;
+    top: 24px;
     left: 35px;
     max-width: 20%;
 }    
@@ -196,6 +198,7 @@ section {
     display: inline-block;
     max-width: 49%; 
     float: right;
+    top: 24px;
     right: 25%; 
 }
 
@@ -253,7 +256,7 @@ footer {
     padding-bottom: 100px;
     position: relative;
     width: 100%;
-    align-content: center;  
+    align-content: center;
 }
 
 .container-footer {
